# spaic-clock

./: .gitignore  PHASE_ARCHITECTURE_README.md  PRESENTATION_SUMMARY.md  README.md  package.xml  setup.cfg  setup.py
Error_terminallogs/: 2026-06-15_phase2_real_full_pipeline_camera_zero_frames.md  2026-06-15_phase2_real_localization_bond_abort_goals_rejected.md
Subsystem_READMEs/: SLAM&NAV_README.md  integration_README.md
cognitive_robot/: drive_and_arm.py  package.xml  setup.py  take_photo.py
cognitive_robot/cognitive_robot/: abacus_manipulation_node.py  depth_utils.py  detect_abacus_service.py  detect_station_service.py  make_photo_for_testing_algorithm.py  read_time_service.py
cognitive_robot/cognitive_robot/plan_nav/: abacus_location.yaml  auto_map.pgm  auto_map.yaml  mapviz.py  odom_tf_broadcaster.py  station_a_location.yaml  station_demo  station_demo.py  trial_depth.py
cognitive_robot/launch/: demo.launch.py  demo_gazebo.launch.py  launch_readme.md  phase1_gazebo.launch.py  phase1_real.launch.py  phase2_gazebo.launch.py  phase2_real.launch.py
cognitive_robot/test/: test_readme.md
cognitive_robot_interfaces/: CMakeLists.txt  cognitive_robot_interfaces_readme.md  package.xml
cognitive_robot_interfaces/srv/: DetectAbacus.srv  DetectStation.srv  ReadTime.srv  RunAbacus.srv
commands_documents/: commands_abacus_detection_and_depth.txt  gazebo_commands.txt  gazebo_testing_station_and_aruco_detection_with_depth.txt  mike_commands.txt  testing_in_gazebo_commands.txt
config/: config_readme.md  mirte_master.xacro  mirte_slam.rviz  nav2_params_mirte.yaml  nav2_params_mirte_real.yaml
debug_logs/: 2026-06-15_phase2_real_camera_timeout_at_stationA.md  2026-06-15_phase2_real_localization_abort.md  2026-06-15_phase2_real_nav_bringup_wedged_changestate_timeout.md  2026-06-15_phase2_real_nav_extrapolation_recovery.md  debug_logs_readme.md
docs/: computer_vision.md
docs/commands_documents/: aruco_station_detection.txt  calibrating_front_camera  commands_abacus_detection_and_depth.txt  gazebo_testing_station_and_aruco_detection_with_depth.txt  mike_commands.txt  mirte_commands.txt  robot_test_perception_screen.txt  testing_in_gazebo_commands.txt
gazebo_map_load/: gazebo_map_README.md
gazebo_map_load/rect_wall/: model.config  model.sdf
gazebo_map_load/station_a_laptop/: model.config  model.sdf
gazebo_map_load/station_a_laptop/materials/scripts/: qr.material
gazebo_map_load/station_b_box/: model.config  model.sdf
gazebo_map_load/station_b_box/materials/scripts/: qr.material
local_script_tests/: test_roboflow.py
local_script_tests/aruco/: aruco_make_photos.py  aruco_test.py
maps/: abacus_location.yaml  auto_map.pgm  auto_map.yaml  maps_readme.md  station_a_location.yaml
testing_only/: station_detector.py  test_roboflow.py  testing_only_readme.md
testing_only/aruro/: aruro_make_photos.py  aruro_test.py
testing_only/clock_reading/: test_ocr.py
